[metadata]
name = pynetlink
version = 1.0.2
description = Python Netlink Library
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
keywords =
    netlink
    dpll

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools
    wheel
install_requires =
    jsonschema
    pyyaml

[options.packages.find]
exclude = pynetlink.tests

[bdist_wheel]
universal = 1
